# rust-lilygo-t5s3pro-epd

./: Cargo.toml  README.md  build.rs  changes.md
.cargo/: config.toml
examples/: backlight.rs  battery_status.rs  clock.rs  ebook.rs  ereader_full.rs  find_button.rs  finger_draw.rs  graphics_test.rs  touch_button.rs
src/: lib.rs  main.rs
src/driver/: display.rs  ed047tc1.rs  graphics.rs  gt911.rs  mod.rs  rmt.rs
