[package]
name = "epaper"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal                = { version = "1.1.0", features = ["esp32s3", "unstable"] }
esp-alloc              = "0.10.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-backtrace          = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println            = { version = "0.17.0", features = ["esp32s3", "log-04"] }
log                    = "0.4"
embedded-hal           = "1"
embedded-graphics-core = "0.4"
embedded-graphics      = "0.8"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = "fat"
opt-level        = "s"
overflow-checks  = false
